tests/baselines/reference/parserExportAssignment2.errors.txt
==== tests/cases/compiler/parserExportAssignment2.ts (1 errors) ====
    export = foo;
    ~~~~~~~~~~~~~
!!! parserExportAssignment2.ts(1,1): error TS2095: Cannot find name 'foo'.